# qcore

./: .gitignore  Cargo.toml  LICENSE  README.md  setup-routing  sims.toml
5g-libs/asn1-per/: Cargo.toml
5g-libs/asn1-per/src/: lib.rs
5g-libs/f1ap/: Cargo.toml
5g-libs/f1ap/src/: common.rs  f1ap_cu.rs  ies.rs  pdu.rs  top_pdu.rs
5g-libs/pdcp/: Cargo.toml
5g-libs/pdcp/src/: lib.rs
5g-libs/rrc/: Cargo.toml
5g-libs/rrc/src/: lib.rs  procedure.rs
5g-libs/security/: Cargo.toml
5g-libs/security/src/: keygen.rs  lib.rs  nia2.rs
5g-libs/xxap/: Cargo.toml
5g-libs/xxap/src/: conversion.rs  ies.rs  lib.rs  transaction.rs
5g-libs/xxap/src/net/: Cargo.toml  mod.rs  sctp_tnla_pool.rs  sctp_transport_provider.rs  stack.rs  tnla_event_handler.rs  transport_provider.rs
5g-libs/xxap/src/net/sctp/: Cargo.toml  mod.rs  sctp_association.rs  sctp_listener.rs
docs/: backlog.md
docs/OpenAirInterface-testing/: README.md  oai-sim.toml
docs/designs - existing/: attach.md  ue serialization.md
docs/designs - future/: paging.md  persistence.md  sim transport key.md
docs/openairinterface_testing/: README.md  oai_test.pcap  qcore-interop-gnb-du.sa.band78.106prb.rfsim.conf
docs/srsRAN-testing/: README.md  du.yml  srs-sim.toml
qcore/: Cargo.toml
qcore/src/: lib.rs  main.rs  qcore.rs
qcore/src/data/: config.rs  mod.rs  nas_context.rs  pdu_session.rs  security_context.rs  sims.rs  ue_context.rs  userplane_session.rs
qcore/src/procedures/: f1_removal.rs  f1_setup.rs  f1ap_handler.rs  gnb_du_configuration_update.rs  handler_api.rs  mod.rs  procedure.rs
qcore/src/procedures/ue_procedures/: deregistration.rs  initial_access.rs  mod.rs  pdu_session_establishment.rs  ue_context_release.rs  ue_message_handler.rs  ul_information_transfer.rs  uplink_nas.rs
qcore/src/protocols/: mod.rs
qcore/src/protocols/f1ap/: build.rs  mod.rs
qcore/src/protocols/nas/: build.rs  mod.rs  parse.rs
qcore/src/protocols/rrc/: build.rs
qcore/src/userplane/: downlink_pipeline.rs  mod.rs  packet_processor.rs  uplink_pipeline.rs
tests/: Cargo.toml  test_sims.toml
tests/src/: data_network.rs  framework.rs  lib.rs  mock.rs  userplane.rs
tests/src/mock_du/: build_f1ap.rs  mod.rs
tests/src/mock_ue/: build_nas.rs  build_rrc.rs  mod.rs
tests/tests/: attach.rs  context_release_request.rs  deregistration.rs  f1_removal.rs  two_ues.rs
