[package]
name = "qcore"
version = "0.1.0"
edition = "2024"

[dependencies]
security = { path = "../5g-libs/security" }
anyhow = "1.0.97"
async-std = { version = "1.13.1", features = ["attributes"] }
async-trait = "0.1.88"
async-channel = "2.3.1"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
slog-envlogger = "2.2.0"
clap = { version = "4.5.32", features = ["derive"] }
f1ap = { path = "../5g-libs/f1ap" }
xxap = { path = "../5g-libs/xxap" }
pdcp = { path = "../5g-libs/pdcp" }
rrc = { path = "../5g-libs/rrc" }
asn1-per = { path = "../5g-libs/asn1-per" }
dashmap = "6.1.0"
stop-token = "0.7.0"
oxirush-nas = { git = "https://github.com/nplrkn/oxirush-nas", branch = "fix-length-1-checks" }
hex-literal = "1.0.0"
rand = "0.9.0"
#rand_core = { version = "0.9.3", features = ["os_rng"] }
index-pool = "1.0.11"
socket2 = { version = "0.5.9", features = ["all"] }
libc = "0.2.171"
async-tun = "0.10.1"
derive_deref = "1.1.1"
signal-hook = "0.3.15"
signal-hook-async-std = "0.2.1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
local-ip-address = "0.6.3"
